fix: made playerdetectionscript more thread safe fix: made fleeing logic more robust by switching worlds after fleeing chore: cleaned up logic to be more human readable